--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ development:
   username: postgres
 
   # The password associated with the PostgreSQL role (username).
-  password: 123
+  password: postgres
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
