Arreglo de bugs, formateo en comentarios y permisos para registro de moderadores

--- a/config/database.yml
+++ b/config/database.yml
@@ -39,7 +39,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -81,8 +81,5 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: readme_backend_production
-  username: readme_backend
-  password: <%= ENV["README_BACKEND_DATABASE_PASSWORD"] %>
+#production:
+# url: '<%= ENV["DATABASE_URL"] %>'
