--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'readme-backend'
+app = 'readmeapp'
 primary_region = 'gru'
 console_command = '/rails/bin/rails console'
 
@@ -13,7 +13,7 @@ console_command = '/rails/bin/rails console'
   release_command = './bin/rails db:prepare'
 
 [http_service]
-  internal_port = 3000
+  internal_port = 4000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
@@ -22,7 +22,7 @@ console_command = '/rails/bin/rails console'
 
 [checks]
   [checks.status]
-    port = 3000
+    port = 4000
     type = 'http'
     interval = '10s'
     timeout = '2s'
