solucion de bugs

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-#production:
- # url: '<%= ENV["DATABASE_URL"] %>'
+production:
+  url: '<%= ENV["DATABASE_URL"] %>'
