--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'readme-backend'
+app = 'readmeapp'
 primary_region = 'gru'
 console_command = '/rails/bin/rails console'
 
