--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'readme-backend'
+app = 'readmeapp'
 primary_region = 'gru'
 console_command = '/rails/bin/rails console'
 
@@ -11,7 +11,7 @@ console_command = '/rails/bin/rails console'
 
 [deploy]
    #pre = ["bundle install", "rails db:migrate", "rails db:seed", rails db:prepare]
-   release_command = './bin/rails db:prepare'
+   release_command = './bin/rails db:seed'
 
 [http_service]
   internal_port = 4000
