--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 /.bundle
 
 # Ignore all environment files (except templates).
-/.env*
-!/.env*.erb
+#/.env*
+#!/.env*.erb
 
 # Ignore all logfiles and tempfiles.
 /log/*
