--- a/.github/workflows/fly_prod.yml
+++ b/.github/workflows/fly_prod.yml
@@ -1,9 +1,9 @@
-name: Fly Deploy Test
+name: Fly Deploy Main
 
 on:
   push:
     branches:
-      - test
+      - main
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -17,4 +17,4 @@ jobs:
 
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - run: flyctl deploy --app readme-backend
+      - run: flyctl deploy --app readmeapp
