--- a/config/database.yml
+++ b/config/database.yml
@@ -30,12 +30,12 @@ development:
   username: postgres
 
   # The password associated with the PostgreSQL role (username).
-  password: 123
+  password: postgres
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -58,9 +58,9 @@ test:
   database: readme_backend_test
 
   username: postgres
-
+  host: localhost
   # The password associated with the PostgreSQL role (username).
-  password: 123
+  password: postgres
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -81,5 +81,5 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  url: '<%= ENV["DATABASE_URL"] %>'
+#production:
+#  url: '<%= ENV["DATABASE_URL"] %>'
