--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ development:
   username: postgres
 
   # The password associated with the PostgreSQL role (username).
-  password: postgres
+  password: 123
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -60,7 +60,7 @@ test:
   username: postgres
   host: localhost
   # The password associated with the PostgreSQL role (username).
-  password: postgres
+  password: 123
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
