--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -9,9 +9,26 @@ env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      # Instalar las dependencias del backend
+      - name: Install dependencies
+        run: |
+          npm install --prefix backend
+          npm install -g yarn
+
+      # Ejecutar los tests del backend
+      - name: Run backend tests
+        run: npm test --prefix backend
+
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    needs: test # Esperar a que la etapa de prueba se complete antes de ejecutar el despliegue
     steps:
       - uses: actions/checkout@v3
 
