--- a/.github/workflows/fly_prod.yml
+++ b/.github/workflows/fly_prod.yml
@@ -9,9 +9,29 @@ env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      # Instalar las dependencias de Rails
+      - name: Install dependencies
+        run: |
+          sudo apt-get install -y nodejs
+          sudo apt-get install -y npm
+          npm install -g yarn
+          gem install bundler
+          bundle install
+
+      # Ejecutar los tests de Rails
+      - name: Run tests
+        run: bundle exec rails test
+
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    needs: test # Esperar a que la etapa de prueba se complete antes de ejecutar el despliegue
     steps:
       - uses: actions/checkout@v3
 
