--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -9,29 +9,34 @@ env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 jobs:
-  test:
-    name: Run tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      # Instalar las dependencias del backend
-      - name: Install dependencies
-        run: |
-          npm install --prefix backend
-          npm install -g yarn
-
-      # Ejecutar los tests del backend
-      - name: Run backend tests
-        run: npm test --prefix backend
-
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-    needs: test # Esperar a que la etapa de prueba se complete antes de ejecutar el despliegue
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
-      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1.4"
 
-      - run: flyctl deploy --app readme-backend
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Set up database
+        run: |
+          cp config/database.yml.ci config/database.yml
+          bundle exec rails db:prepare RAILS_ENV=test
+
+      - name: Run tests
+        run: bundle exec rails test
+
+      - name: Set up Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
+
+      - name: Deploy to Fly.io
+        if: success()
+        run: flyctl deploy --app readme-backend
