configurando db test

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ EMAIL_PASSWORD =fkidtcifoyloolfx
 EMAIL=readmeapp.social@gmail.com
 
 FRONT_URL=http://127.0.0.1:3000
+DATABASE_URL_TEST="postgres://postgres:2UjAMF3pJjuvSML@rough-water-270.flycast:5432"
+
+DATABASE_URL="postgres://postgres:2UjAMF3pJjuvSML@rough-water-270.flycast:5432"
