--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ development:
   username: postgres
 
   # The password associated with the PostgreSQL role (username).
-  password: postgres
+  password: 123
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -54,8 +54,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  url: <%= ENV["DATABASE_TEST_URL"] %>
+  adapter: postgresql
+  encoding: unicode
+  url: '<%= ENV["DATABASE_TEST_URL"] %>'
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -76,6 +77,6 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-#production:
-#  url: '<%= ENV["DATABASE_URL"] %>'
+production:
+  url: '<%= ENV["DATABASE_URL"] %>'
 
