--- a/config/database.yml
+++ b/config/database.yml
@@ -54,8 +54,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   url: '<%= ENV["DATABASE_TEST_URL"] %>'
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
