--- a/fly.toml
+++ b/fly.toml
@@ -10,8 +10,7 @@ console_command = '/rails/bin/rails console'
 [build]
 
 [deploy]
-   #pre = ["bundle install", "rails db:migrate", "rails db:seed", rails db:prepare]
-   release_command = './bin/rails db:prepare'
+   release_command = './bin/release'
 
 [http_service]
   internal_port = 4000
